discussion/kv_engine/181803/181803_rev16_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46890: Add support for per-bucket audit filter

This patch does not add support for per scope/collection
filter

Change-Id: Ie9124f3edb9968512ee7f8799196812556a7af71

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-28 05:24:55.000000000
Message: 
Uploaded patch set 16.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-28 05:39:11.000000000
Message: 
Patch Set 16: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50784/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50784/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24009/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24009/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32026/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32026/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21567/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:154:29: error: call to non-static member function without an object argument [clang-diagnostic-error]
    AuditDescriptorManager::lookup(MEMCACHED_AUDIT_INVALID_PACKET);
                            ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21567/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:154:29:
error: call to non-static member function without an object argument [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21567/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/299/ : FAILURE

Compile error at [2022-10-28T05:27:28.425Z] ../kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:154:66:
error: cannot call member function ?const EventDescriptor* AuditDescriptorManager::lookup(uint32_t) const? without object
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/299/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11296/ : FAILURE

Compile error at [2022-10-28T05:30:21.995Z] ../kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:154:29:
error: call to non-static member function without an object argument
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11296/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23601/ : FAILURE

Compile error at [2022-10-28T05:36:02.366Z] ../kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:154:66:
error: cannot call member function ?const EventDescriptor* AuditDescriptorManager::lookup(uint32_t) const? without object
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23601/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24841/ : FAILURE

Compile error at [2022-10-28T05:36:45.838Z] ../kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:154:29:
error: call to non-static member function without an object argument
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24841/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11387/ : FAILURE

Compile error at [2022-10-28T05:30:40.740Z] ../kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:154:65:
error: cannot call member function ?const EventDescriptor* AuditDescriptorManager::lookup(uint32_t) const? without object
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11387/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23030/ : FAILURE

Compile error at [2022-10-28T05:32:53.524Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:154:29:
error: call to non-static member function without an object argument
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23030/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20840/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42632/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
